--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
-blank_issues_enabled: false
+blank_issues_enabled: true
 contact_links:
     - name: Ask a question
-      url: https://github.com/SiteOrigin/openai-api/discussions/new?category=q-a
+      url: https://github.com/siteorigin/openai-api/discussions/new?category=q-a
       about: Ask the community for help
     - name: Request a feature
-      url: https://github.com/SiteOrigin/openai-api/discussions/new?category=ideas
+      url: https://github.com/siteorigin/openai-api/discussions/new?category=ideas
       about: Share ideas for new features
     - name: Report a bug
-      url: https://github.com/SiteOrigin/openai-api/issues/new
+      url: https://github.com/siteorigin/openai-api/issues/new
       about: Report a reproducable bug
