--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
+        "larapack/dd": "^1.1",
         "phpunit/phpunit": "^9.5",
         "spatie/ray": "^1.27",
         "vimeo/psalm": "^4.3",
