--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     },
     "scripts": {
         "psalm": "vendor/bin/psalm",
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/phpunit --exclude-group nonAutoRun",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
