--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "psalm": "vendor/bin/psalm",
         "test": "vendor/bin/phpunit --exclude-group nonAutoRun",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+        "format": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes"
     },
     "config": {
         "sort-packages": true
