--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,7 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+ij_any_wrap_long_lines = true
 
 [*.{yml,yaml}]
 indent_size = 2
