--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "siteorigin/openai-api",
     "description": "A PHP wrapper for the OpenAI API",
     "keywords": [
-        "SiteOrigin",
-        "openai_api"
+        "openai",
+        "gpt-3"
     ],
     "homepage": "https://github.com/siteorigin/openai_api",
     "license": "MIT",
@@ -16,13 +16,13 @@
     ],
     "require": {
         "php": "^8.0",
-        "dallgoot/yaml": "^0.3.2",
         "guzzlehttp/guzzle": "^7.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
         "larapack/dd": "^1.1",
         "phpunit/phpunit": "^9.5",
+        "psy/psysh": "@stable",
         "spatie/ray": "^1.27",
         "vimeo/psalm": "^4.3",
         "vlucas/phpdotenv": "^5.3"
@@ -41,7 +41,8 @@
         "psalm": "vendor/bin/psalm",
         "test": "vendor/bin/phpunit --exclude-group nonAutoRun",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "format": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes"
+        "format": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes",
+        "psysh": "vendor/bin/psysh"
     },
     "config": {
         "sort-packages": true
